[gd_scene load_steps=7 format=3 uid="uid://b0lhhhsq3cx0u"]

[ext_resource type="Script" uid="uid://c8jew4lrc3st4" path="res://ui/numpad_button/numpad_button.gd" id="1_75xce"]
[ext_resource type="Script" uid="uid://cle5eekmroq40" path="res://ui/score_tab/score_tab.gd" id="1_sed73"]
[ext_resource type="Script" uid="uid://cegqlp4nh0eq6" path="res://ui/numpad_button/backspace_button.gd" id="2_wvjya"]
[ext_resource type="Script" uid="uid://cogogjprxotyf" path="res://ui/edit_action_button/add_edit_action.gd" id="3_ji2sn"]
[ext_resource type="Script" uid="uid://bdn2vfj5impgh" path="res://ui/edit_action_button/substract_edit_action.gd" id="4_gj7ei"]
[ext_resource type="Script" uid="uid://biipk3j3p1mky" path="res://ui/edit_action_button/set_edit_action.gd" id="5_tgmw7"]

[node name="ScoreTab" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sed73")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ElementsList" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="PlayerList" type="VBoxContainer" parent="ScrollContainer/MarginContainer/ElementsList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/ElementsList"]
layout_mode = 2
theme_override_constants/margin_left = 3

[node name="AddPlayerButton" type="Button" parent="ScrollContainer/MarginContainer/ElementsList/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Add player"

[node name="PlayerEditPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PlayerEditPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerEditPanel/MarginContainer"]
layout_mode = 2

[node name="PlayerEditLine" type="LineEdit" parent="PlayerEditPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="EditButtons" type="HBoxContainer" parent="PlayerEditPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Numpad" type="VBoxContainer" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad"]
layout_mode = 2

[node name="1" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad/HBoxContainer" node_paths=PackedStringArray("player_edit_line")]
layout_mode = 2
size_flags_horizontal = 3
text = "1"
script = ExtResource("1_75xce")
player_edit_line = NodePath("../../../../PlayerEditLine")

[node name="2" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad/HBoxContainer" node_paths=PackedStringArray("player_edit_line")]
layout_mode = 2
size_flags_horizontal = 3
text = "2"
script = ExtResource("1_75xce")
player_edit_line = NodePath("../../../../PlayerEditLine")

[node name="3" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad/HBoxContainer" node_paths=PackedStringArray("player_edit_line")]
layout_mode = 2
size_flags_horizontal = 3
text = "3"
script = ExtResource("1_75xce")
player_edit_line = NodePath("../../../../PlayerEditLine")

[node name="HBoxContainer2" type="HBoxContainer" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad"]
layout_mode = 2

[node name="4" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad/HBoxContainer2" node_paths=PackedStringArray("player_edit_line")]
layout_mode = 2
size_flags_horizontal = 3
text = "4"
script = ExtResource("1_75xce")
player_edit_line = NodePath("../../../../PlayerEditLine")

[node name="5" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad/HBoxContainer2" node_paths=PackedStringArray("player_edit_line")]
layout_mode = 2
size_flags_horizontal = 3
text = "5"
script = ExtResource("1_75xce")
player_edit_line = NodePath("../../../../PlayerEditLine")

[node name="6" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad/HBoxContainer2" node_paths=PackedStringArray("player_edit_line")]
layout_mode = 2
size_flags_horizontal = 3
text = "6"
script = ExtResource("1_75xce")
player_edit_line = NodePath("../../../../PlayerEditLine")

[node name="HBoxContainer3" type="HBoxContainer" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad"]
layout_mode = 2

[node name="7" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad/HBoxContainer3" node_paths=PackedStringArray("player_edit_line")]
layout_mode = 2
size_flags_horizontal = 3
text = "7"
script = ExtResource("1_75xce")
player_edit_line = NodePath("../../../../PlayerEditLine")

[node name="8" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad/HBoxContainer3" node_paths=PackedStringArray("player_edit_line")]
layout_mode = 2
size_flags_horizontal = 3
text = "8"
script = ExtResource("1_75xce")
player_edit_line = NodePath("../../../../PlayerEditLine")

[node name="9" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad/HBoxContainer3" node_paths=PackedStringArray("player_edit_line")]
layout_mode = 2
size_flags_horizontal = 3
text = "9"
script = ExtResource("1_75xce")
player_edit_line = NodePath("../../../../PlayerEditLine")

[node name="HBoxContainer4" type="HBoxContainer" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad"]
layout_mode = 2

[node name="0" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad/HBoxContainer4" node_paths=PackedStringArray("player_edit_line")]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
script = ExtResource("1_75xce")
player_edit_line = NodePath("../../../../PlayerEditLine")

[node name="Backspace" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/Numpad/HBoxContainer4" node_paths=PackedStringArray("player_edit_line")]
layout_mode = 2
size_flags_horizontal = 3
text = "â‡¦"
script = ExtResource("2_wvjya")
player_edit_line = NodePath("../../../../PlayerEditLine")

[node name="EditActionButtons" type="VBoxContainer" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AddButton" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/EditActionButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "+"
script = ExtResource("3_ji2sn")

[node name="SubstractButton" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/EditActionButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "-"
script = ExtResource("4_gj7ei")

[node name="SetButton" type="Button" parent="PlayerEditPanel/MarginContainer/VBoxContainer/EditButtons/EditActionButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Set"
script = ExtResource("5_tgmw7")
